--- a/big-o-test-spring-boot-demo/pom.xml
+++ b/big-o-test-spring-boot-demo/pom.xml
@@ -13,14 +13,23 @@
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>3.1.5</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<relativePath/>
 	</parent>
 
 	<properties>
 		<java.version>17</java.version>
 		<encoding>UTF-8</encoding>
+
 		<maven.compiler.source>${java.version}</maven.compiler.source>
 		<maven.compiler.target>${java.version}</maven.compiler.target>
+
+		<version.versions-maven-plugin>2.16.1</version.versions-maven-plugin>
+		<version.maven-surefire-plugin>3.1.2</version.maven-surefire-plugin>
+		<version.maven-compiler-plugin>3.11.0</version.maven-compiler-plugin>
+		<version.dependency-check-maven>8.4.0</version.dependency-check-maven>
+
+		<version.lombok>1.18.30</version.lombok>
+		<version.big-o-test>1.0.0</version.big-o-test>
 	</properties>
 
 	<dependencies>
@@ -34,27 +43,15 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.13.2</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
-			<version>1.18.30</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>com.google.guava</groupId>
-			<artifactId>guava</artifactId>
-			<version>32.1.2-jre</version>
-			<scope>test</scope>
+			<version>${version.lombok}</version>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>com.sw_engineering_candies</groupId>
 			<artifactId>big-o-test</artifactId>
-			<version>1.0.0</version>
+			<version>${version.big-o-test}</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
@@ -64,7 +61,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.7.0</version>
+				<version>${version.maven-compiler-plugin}</version>
 				<configuration>
 					<source>${java.version}</source>
 					<target>${java.version}</target>
@@ -74,10 +71,24 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.14.1</version>
-				<configuration>
-					<argLine>-Xint</argLine>
-				</configuration>
+				<version>${version.maven-surefire-plugin}</version>
+			</plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>versions-maven-plugin</artifactId>
+				<version>${version.versions-maven-plugin}</version>
+			</plugin>
+			<plugin>
+				<groupId>org.owasp</groupId>
+				<artifactId>dependency-check-maven</artifactId>
+				<version>${version.dependency-check-maven}</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>check</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
